Uploaded by https://stackedit.io/

--- a/_posts/2018-01-03-linking.md
+++ b/_posts/2018-01-03-linking.md
@@ -3,10 +3,8 @@
 
 ---
 
-<hr>
-<p>layout: post
-title: How does the linker find the dependent shared libraries?</p>
-<hr>
+<p>layout     : page<br>
+title: how does the linker find the dependent shared libraries</p>
 <p>When you compile a hello world problem, it has to link the standard C library at least. How does the linker know the dependence of HelloWorld?</p>
 <h2 id="dt_needed-entry-in-.dynamic">DT_NEEDED entry in .dynamic</h2>
 <p>To use a specific shared library, you have to specify its name to provide symbol definition for a placeholder when compiling the program.</p>
