--- a/_posts/2018-01-03-linking.md
+++ b/_posts/2018-01-03-linking.md
@@ -3,8 +3,7 @@
 
 ---
 
-<p>layout     : page<br>
-title: how does the linker find the dependent shared libraries</p>
+<h1 id="how-does-the-linker-find-the-dependent-shared-libraries">how does the linker find the dependent shared libraries</h1>
 <p>When you compile a hello world problem, it has to link the standard C library at least. How does the linker know the dependence of HelloWorld?</p>
 <h2 id="dt_needed-entry-in-.dynamic">DT_NEEDED entry in .dynamic</h2>
 <p>To use a specific shared library, you have to specify its name to provide symbol definition for a placeholder when compiling the program.</p>
