Delete unused files.

--- a/_posts/2018-01-03-linking.md
+++ b/_posts/2018-01-03-linking.md
@@ -1,6 +1,6 @@
 ---
-layout: page
-title: how does the linker find the dependent shared libraries
+layout	: page
+title		: "how does the linker find the dependent shared libraries"
 ---
 
 
