--- a/_posts/2018-01-03-linking.md
+++ b/_posts/2018-01-03-linking.md
@@ -1,6 +1,8 @@
 ---
 layout	: page
-title		: "how does the linker find the dependent shared libraries"
+title		: "How does the linker find the dependent shared libraries"
+date       : 2018-01-04
+author      : "pshung"
 ---
 
 
