--- a/_posts/2018-01-03-linking.md
+++ b/_posts/2018-01-03-linking.md
@@ -52,19 +52,19 @@ Example:
 To reduce the space, system won't have all versions of shared libraries.
 Since higher minor number is compatible with lower one and release numbers are all compatible.
 
-SONAME records only library name and the major number.\
+SONAME records only library name and the major number.
 System will create a symbolic link pointing to the shared library with the highest minor number.
 
-Example:\
-libABC.so.1.2.2 and libABC.so.1.1.1.\
-Both have the SONAME as libABC.so.1.\
-libABC.so.1 will point to libABC.so.1.2.2(The highest minor number).\
+Example:  
+libABC.so.1.2.2 and libABC.so.1.1.1.
+Both have the SONAME as libABC.so.1.  
+libABC.so.1 will point to libABC.so.1.2.2(The highest minor number).  
 
 In the above case, linker only records the SONAME, and only one shared library exists in the system.
 
 
 
 ## Conclusion
-ABI compatibility is hard to maintain since the language feature and architecutre convention.\
-Therefore, version control of shared library is a critical issue.\
+ABI compatibility is hard to maintain since the language feature and architecutre convention.  
+Therefore, version control of shared library is a critical issue.
 UNIX defines three kinds of version number so that we can know whether shared libraries are compatible or not.
