--- a/_posts/2018-01-03-linking.md
+++ b/_posts/2018-01-03-linking.md
@@ -1,6 +1,6 @@
 ---
 layout	: page
-title		: "How does the linker find the dependent shared libraries"
+title		: "[Linker] How does the linker find the dependent shared libraries"
 date       : 2018-01-04
 author      : "pshung"
 ---
