--- a/_posts/2018-03-23-golang-1.md
+++ b/_posts/2018-03-23-golang-1.md
@@ -1,9 +1,28 @@
 ---
 layout	: page
-title		: "[golang] #1 setter and getter"
+title		: "[golang] #1 coding convention"
 date       : 2018-03-23
 author      : "pshung"
 ---
 
+# Naming of setter and getter methods
+If you have a struct field called **value**, how to name the setter and getter methods?
+It's suggested to use **Value** as getter method and **SetValue** as setter method.
 
-a test md.
+# MixedCap naming for multiword names.
+The convention in Go is to use MixedCaps or mixedCaps rather than underscores
+to write multiword names.
+example: nextNumber or NextNumber rather than next_number
+
+# Control structure: if
+If and switch can accept an optional initialization statement, it's common to
+see one used to set up a local variable.
+example:
+```go
+if err := doSomething(); err != nil {
+		// function body
+}
+```
+
+
+
