--- a/_posts/2018-03-23-golang-1.md
+++ b/_posts/2018-03-23-golang-1.md
@@ -1,6 +1,6 @@
 ---
 layout	: page
-title		: "[golang] #1 coding convention"
+title		: "[golang] effective go #1"
 date       : 2018-03-23
 author      : "pshung"
 ---
@@ -20,9 +20,10 @@ see one used to set up a local variable.
 example:
 ```go
 if err := doSomething(); err != nil {
-		// function body
+// function body
 }
 ```
+
 
 
 
