Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -1,7 +1,7 @@
 
 ---
 layout  : page
-title   : "A test"
+title   : "Using stackedit to write your blog and publish on the github"
 date       : 2018-04-20
 author      : "pshung"
 ---
@@ -9,5 +9,5 @@ author      : "pshung"
 
 # A test page
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQxNjAxNDk5N119
+eyJoaXN0b3J5IjpbMTg3MjA0NjU3Nl19
 -->
