--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -1,13 +1,13 @@
 
 ---
 layout  : page
-title   : "Using stackedit to write your blog and publish on the github"
+title   : "BBC 6 minut"
 date       : 2018-04-20
 author      : "pshung"
 ---
 
 
-# A test page
+# 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg3MjA0NjU3Nl19
+eyJoaXN0b3J5IjpbMTM3NDkwOTA2Nl19
 -->
