Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -1,13 +1,13 @@
 
 ---
 layout  : page
-title   : "Using stackedit to write your blog and publish on the github"
+title   : "BBC 6 minutt"
 date       : 2018-04-20
 author      : "pshung"
 ---
 
 
-# A test page
+# 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg3MjA0NjU3NiwxNDE2MDE0OTk3XX0=
+eyJoaXN0b3J5IjpbMTc5OTkxMzk5MiwxNDE2MDE0OTk3XX0=
 -->
