Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -1,13 +1,17 @@
 
 ---
 layout  : page
-title   : "BBC 6 minutt"
+title   : "BBC 6 minutes #1, foodie"
 date       : 2018-04-20
 author      : "pshung"
 ---
 
 
-# 
+#Reference
+[Are you a foodie ?](http://www.bbc.co.uk/learningenglish/english/features/6-minute-english/ep-180412)
+
+## 
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc5OTkxMzk5MiwxNDE2MDE0OTk3XX0=
+eyJoaXN0b3J5IjpbLTE5MTI0NDg1LDE0MTYwMTQ5OTddfQ==
 -->
