Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -7,11 +7,12 @@ author      : "pshung"
 ---
 
 
-#Reference
+### Reference
 [Are you a foodie ?](http://www.bbc.co.uk/learningenglish/english/features/6-minute-english/ep-180412)
 
-## 
+### Vocabularies
+* foodie 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MTI0NDg1LDE0MTYwMTQ5OTddfQ==
+eyJoaXN0b3J5IjpbLTE2NzMyNTc1NCwxNDE2MDE0OTk3XX0=
 -->
