Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -11,8 +11,9 @@ author      : "pshung"
 [Are you a foodie ?](http://www.bbc.co.uk/learningenglish/english/features/6-minute-english/ep-180412)
 
 ### Vocabularies
-* foodie 
+* foodie: someone who is very interested in all aspects of food from buying, cooking to eating.
+* romantic: describe an idea
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NzMyNTc1NF19
+eyJoaXN0b3J5IjpbNTEzNDU3NzQ2LC0xNjczMjU3NTRdfQ==
 -->
