--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -11,8 +11,10 @@ author      : "pshung"
 [Are you a foodie ?](http://www.bbc.co.uk/learningenglish/english/features/6-minute-english/ep-180412)
 
 ### Vocabularies
-* foodie 
+* foodie: someone who is very interested in all aspects of food from buying, cooking to eating.
+* romantic: describe an ideal si
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NzMyNTc1NCwxNDE2MDE0OTk3XX0=
+eyJoaXN0b3J5IjpbODM2MzMxNDAwLC0xNjczMjU3NTQsMTQxNj
+AxNDk5N119
 -->
