Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -12,8 +12,11 @@ author      : "pshung"
 
 ### Vocabularies
 * foodie: someone who is very interested in all aspects of food from buying, cooking to eating.
-* romantic: describe an idea
+* romantic: describe an imagined ideal situation
+* in danger of: the possibility of something bad happening
+
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTEzNDU3NzQ2LC0xNjczMjU3NTRdfQ==
+eyJoaXN0b3J5IjpbODU2MDI1ODk5LC0xNjczMjU3NTRdfQ==
 -->
