Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -12,9 +12,12 @@ author      : "pshung"
 
 ### Vocabularies
 * foodie: someone who is very interested in all aspects of food from buying, cooking to eating.
-* romantic: describe an ideal si
+* romantic: describe an imagined ideal situation
+* in danger of: the possibility of something bad happening
+
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODM2MzMxNDAwLC0xNjczMjU3NTQsMTQxNj
+eyJoaXN0b3J5IjpbODU2MDI1ODk5LC0xNjczMjU3NTQsMTQxNj
 AxNDk5N119
 -->
