Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -18,7 +18,10 @@ author      : "pshung"
 
 ### Sentences
 * reveal the answer.
+* good ingredient 
+* fans of fast food
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzODYyMzg4NDgsODU2MDI1ODk5LC0xNj
+eyJoaXN0b3J5IjpbLTEzNTkxNzg4MDEsODU2MDI1ODk5LC0xNj
 czMjU3NTQsMTQxNjAxNDk5N119
 -->
