--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -18,10 +18,10 @@ author      : "pshung"
 
 ### Sentences
 * reveal the answer.
-* good ingredient 
-* fans of fast food
+* They like using good ingredient.
+* They are probably not fans of fast food
 * 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNTkxNzg4MDEsODU2MDI1ODk5LC0xNj
+eyJoaXN0b3J5IjpbLTE3Mzg5MzU3OTIsODU2MDI1ODk5LC0xNj
 czMjU3NTRdfQ==
 -->
