Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -20,8 +20,9 @@ author      : "pshung"
 * reveal the answer.
 * They like using good ingredient.
 * They are probably not fans of fast food
-* 
+* I would describe a foodie as someone who has strong interest in food.
+	* who is intere
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3Mzg5MzU3OTIsODU2MDI1ODk5LC0xNj
-czMjU3NTRdfQ==
+eyJoaXN0b3J5IjpbLTU0MDA5ODg3NSwtMTczODkzNTc5Miw4NT
+YwMjU4OTksLTE2NzMyNTc1NF19
 -->
