Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -20,8 +20,9 @@ author      : "pshung"
 * reveal the answer.
 * They like using good ingredient.
 * They are probably not fans of fast food
-* 
+* I would describe a foodie as someone who has strong interest in food.
+	* who is interested in 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3Mzg5MzU3OTIsODU2MDI1ODk5LC0xNj
-czMjU3NTQsMTQxNjAxNDk5N119
+eyJoaXN0b3J5IjpbOTU4OTkxNDY2LC0xNzM4OTM1NzkyLDg1Nj
+AyNTg5OSwtMTY3MzI1NzU0LDE0MTYwMTQ5OTddfQ==
 -->
