Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -21,8 +21,11 @@ author      : "pshung"
 * They like using good ingredient.
 * They are probably not fans of fast food
 * I would describe a foodie as someone who has strong interest in food.
-	* who is interested in 
+	* someone who is interested in 
+	* someone who has interest in
+* They like preparing it as well as eating it.
+	* They  like prepareing and eating it.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTU4OTkxNDY2LC0xNzM4OTM1NzkyLDg1Nj
-AyNTg5OSwtMTY3MzI1NzU0LDE0MTYwMTQ5OTddfQ==
+eyJoaXN0b3J5IjpbLTM5MDM2NTY1OCwtMTczODkzNTc5Miw4NT
+YwMjU4OTksLTE2NzMyNTc1NCwxNDE2MDE0OTk3XX0=
 -->
