Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -17,15 +17,14 @@ author      : "pshung"
 
 
 ### Sentences
-* reveal the answer.
-* They like using good ingredient.
-* They are probably not fans of fast food
+* I will reveal the answer a little 
+* They like using good ingredients and they are probably not fans of fast food.
 * I would describe a foodie as someone who has strong interest in food.
 	* someone who is interested in 
 	* someone who has interest in
 * They like preparing it as well as eating it.
 	* They  like prepareing and eating it.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM5MDM2NTY1OCwtMTczODkzNTc5Miw4NT
+eyJoaXN0b3J5IjpbMTY5OTk4ODYyOCwtMTczODkzNTc5Miw4NT
 YwMjU4OTksLTE2NzMyNTc1NCwxNDE2MDE0OTk3XX0=
 -->
