Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -17,7 +17,7 @@ author      : "pshung"
 
 
 ### Sentences
-* I will reveal the answer a li
+* I will reveal the answer a little later.
 * They like using good ingredients and they are probably not fans of fast food.
 * I would describe a foodie as someone who has strong interest in food.
 	* someone who is interested in 
@@ -25,6 +25,6 @@ author      : "pshung"
 * They like preparing it as well as eating it.
 	* They  like prepareing and eating it.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzIwODgyNzk3LC0xNzM4OTM1NzkyLDg1Nj
-AyNTg5OSwtMTY3MzI1NzU0XX0=
+eyJoaXN0b3J5IjpbLTYxMTMzODA2MiwtMTczODkzNTc5Miw4NT
+YwMjU4OTksLTE2NzMyNTc1NF19
 -->
