Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -23,8 +23,8 @@ author      : "pshung"
 	* someone who is interested in 
 	* someone who has interest in
 * They like preparing it as well as eating it.
-	* They  like prepareing and eating it.
+	* one of Britain's top chefs.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYxMTMzODA2MiwtMTczODkzNTc5Miw4NT
+eyJoaXN0b3J5IjpbLTYxNjc2MjI2OCwtMTczODkzNTc5Miw4NT
 YwMjU4OTksLTE2NzMyNTc1NF19
 -->
