--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -23,8 +23,8 @@ author      : "pshung"
 	* someone who is interested in 
 	* someone who has interest in
 * They like preparing it as well as eating it.
-	* 
+	* one of Britain's top chefs.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTIwMTYxMzg4LC0xNzM4OTM1NzkyLDg1Nj
-AyNTg5OSwtMTY3MzI1NzU0LDE0MTYwMTQ5OTddfQ==
+eyJoaXN0b3J5IjpbLTYxNjc2MjI2OCwtMTczODkzNTc5Miw4NT
+YwMjU4OTksLTE2NzMyNTc1NCwxNDE2MDE0OTk3XX0=
 -->
