Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -24,7 +24,9 @@ author      : "pshung"
 	* someone who has interest in
 * They like preparing it as well as eating it.
 	* one of Britain's top chefs.
+* How does she describe people who say they are foodies?
+* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYxNjc2MjI2OCwtMTczODkzNTc5Miw4NT
-YwMjU4OTksLTE2NzMyNTc1NF19
+eyJoaXN0b3J5IjpbLTY5ODI0MDU3MiwtNjE2NzYyMjY4LC0xNz
+M4OTM1NzkyLDg1NjAyNTg5OSwtMTY3MzI1NzU0XX0=
 -->
