Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -25,9 +25,9 @@ author      : "pshung"
 * They like preparing it as well as eating it.
 	* one of Britain's top chefs.
 * How does she describe people who say they are foodies?
-* 
+* She is s
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY5ODI0MDU3MiwtNjE2NzYyMjY4LC0xNz
-M4OTM1NzkyLDg1NjAyNTg5OSwtMTY3MzI1NzU0LDE0MTYwMTQ5
-OTddfQ==
+eyJoaXN0b3J5IjpbMjAzNjcyMzAzMSwtNjk4MjQwNTcyLC02MT
+Y3NjIyNjgsLTE3Mzg5MzU3OTIsODU2MDI1ODk5LC0xNjczMjU3
+NTQsMTQxNjAxNDk5N119
 -->
