Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -25,9 +25,9 @@ author      : "pshung"
 * They like preparing it as well as eating it.
 	* one of Britain's top chefs.
 * How does she describe people who say they are foodies?
-* Sh e
+* She is saying people who say they are foodies may not actually know that much about food.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ3NjE5NDE4NiwtNjk4MjQwNTcyLC02MT
-Y3NjIyNjgsLTE3Mzg5MzU3OTIsODU2MDI1ODk5LC0xNjczMjU3
-NTRdfQ==
+eyJoaXN0b3J5IjpbODI5ODEyMTcxLC02OTgyNDA1NzIsLTYxNj
+c2MjI2OCwtMTczODkzNTc5Miw4NTYwMjU4OTksLTE2NzMyNTc1
+NF19
 -->
