Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -26,8 +26,9 @@ author      : "pshung"
 	* one of Britain's top chefs.
 * How does she describe people who say they are foodies?
 * She is saying people who say they are foodies may not actually know that much about food.
+* What is her description of a foodie?
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODI5ODEyMTcxLC02OTgyNDA1NzIsLTYxNj
-c2MjI2OCwtMTczODkzNTc5Miw4NTYwMjU4OTksLTE2NzMyNTc1
-NCwxNDE2MDE0OTk3XX0=
+eyJoaXN0b3J5IjpbMTI0MjQ4MzAwNSw4Mjk4MTIxNzEsLTY5OD
+I0MDU3MiwtNjE2NzYyMjY4LC0xNzM4OTM1NzkyLDg1NjAyNTg5
+OSwtMTY3MzI1NzU0LDE0MTYwMTQ5OTddfQ==
 -->
