Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -17,7 +17,7 @@ author      : "pshung"
 
 
 ### Sentences
-* I will reveal the answer a little later.
+* I will reveal the answer a little bit later.
 * They like using good ingredients and they are probably not fans of fast food.
 * I would describe a foodie as someone who has strong interest in food.
 	* someone who is interested in 
@@ -28,7 +28,7 @@ author      : "pshung"
 * She is saying people who say they are foodies may not actually know that much about food.
 * What is her description of a foodie?
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI0MjQ4MzAwNSw4Mjk4MTIxNzEsLTY5OD
+eyJoaXN0b3J5IjpbMTQ1OTgxNTkxNCw4Mjk4MTIxNzEsLTY5OD
 I0MDU3MiwtNjE2NzYyMjY4LC0xNzM4OTM1NzkyLDg1NjAyNTg5
 OSwtMTY3MzI1NzU0LDE0MTYwMTQ5OTddfQ==
 -->
