--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -27,12 +27,13 @@ author      : "pshung"
 * How does she describe people who say they are foodies?
 * She is saying people who say they are foodies may not actually know that much about food.
 * What is her description of a foodie?
+* We normally think of the word romantic when we're talking about love and relationship, but tha
 
 ### Questions
 
 ### Summary
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzQ2NTA0OTQ1LDgyOTgxMjE3MSwtNjk4Mj
-QwNTcyLC02MTY3NjIyNjgsLTE3Mzg5MzU3OTIsODU2MDI1ODk5
-LC0xNjczMjU3NTRdfQ==
+eyJoaXN0b3J5IjpbMTI0MDM4OTE2OCw4Mjk4MTIxNzEsLTY5OD
+I0MDU3MiwtNjE2NzYyMjY4LC0xNzM4OTM1NzkyLDg1NjAyNTg5
+OSwtMTY3MzI1NzU0XX0=
 -->
