Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -27,12 +27,13 @@ author      : "pshung"
 * How does she describe people who say they are foodies?
 * She is saying people who say they are foodies may not actually know that much about food.
 * What is her description of a foodie?
+* We normally think of the word romantic when we're talking about love and relationship, but that'i
 
 ### Questions
 
 ### Summary
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzQ2NTA0OTQ1LDgyOTgxMjE3MSwtNjk4Mj
-QwNTcyLC02MTY3NjIyNjgsLTE3Mzg5MzU3OTIsODU2MDI1ODk5
-LC0xNjczMjU3NTQsMTQxNjAxNDk5N119
+eyJoaXN0b3J5IjpbLTE0OTkyNjM5NDAsODI5ODEyMTcxLC02OT
+gyNDA1NzIsLTYxNjc2MjI2OCwtMTczODkzNTc5Miw4NTYwMjU4
+OTksLTE2NzMyNTc1NCwxNDE2MDE0OTk3XX0=
 -->
