--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -27,13 +27,14 @@ author      : "pshung"
 * How does she describe people who say they are foodies?
 * She is saying people who say they are foodies may not actually know that much about food.
 * What is her description of a foodie?
-* We normally think of the word romantic when we're talking about love and relationship, but tha
+* We normally think of the word romantic when we're talking about love and relationship, but that is not what is means here, is it?
 
 ### Questions
 
 ### Summary
+Word romantic can be used to describle a
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI0MDM4OTE2OCw4Mjk4MTIxNzEsLTY5OD
+eyJoaXN0b3J5IjpbMTc5OTUwODYzNyw4Mjk4MTIxNzEsLTY5OD
 I0MDU3MiwtNjE2NzYyMjY4LC0xNzM4OTM1NzkyLDg1NjAyNTg5
 OSwtMTY3MzI1NzU0XX0=
 -->
