Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -27,13 +27,14 @@ author      : "pshung"
 * How does she describe people who say they are foodies?
 * She is saying people who say they are foodies may not actually know that much about food.
 * What is her description of a foodie?
-* We normally think of the word romantic when we're talking about love and relationship, but that'i
+* We normally think of the word romantic when we're talking about love and relationship, but that is not what is means here, is it?
 
 ### Questions
 
 ### Summary
+Word romantic can be used to describle a
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0OTkyNjM5NDAsODI5ODEyMTcxLC02OT
-gyNDA1NzIsLTYxNjc2MjI2OCwtMTczODkzNTc5Miw4NTYwMjU4
-OTksLTE2NzMyNTc1NCwxNDE2MDE0OTk3XX0=
+eyJoaXN0b3J5IjpbMTc5OTUwODYzNyw4Mjk4MTIxNzEsLTY5OD
+I0MDU3MiwtNjE2NzYyMjY4LC0xNzM4OTM1NzkyLDg1NjAyNTg5
+OSwtMTY3MzI1NzU0LDE0MTYwMTQ5OTddfQ==
 -->
