--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -28,13 +28,15 @@ author      : "pshung"
 * She is saying people who say they are foodies may not actually know that much about food.
 * What is her description of a foodie?
 * We normally think of the word romantic when we're talking about love and relationship, but that is not what is means here, is it?
+* What is she worried about?
+	* What does she worry about?
 
 ### Questions
 
 ### Summary
 Word romantic can be used to describle a unrela
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTQ1NzkwNzQyLDgyOTgxMjE3MSwtNjk4Mj
-QwNTcyLC02MTY3NjIyNjgsLTE3Mzg5MzU3OTIsODU2MDI1ODk5
-LC0xNjczMjU3NTRdfQ==
+eyJoaXN0b3J5IjpbLTYyOTU5NTU2Miw1NDU3OTA3NDIsODI5OD
+EyMTcxLC02OTgyNDA1NzIsLTYxNjc2MjI2OCwtMTczODkzNTc5
+Miw4NTYwMjU4OTksLTE2NzMyNTc1NF19
 -->
