Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -14,7 +14,7 @@ author      : "pshung"
 * foodie: someone who is very interested in all aspects of food from buying, cooking to eating.
 * romantic: describe an imagined ideal situation
 * in danger of: the possibility of something bad happening
-
+* tick: make a mark on a list.
 
 ### Sentences
 * I will reveal the answer a little bit later.
@@ -36,7 +36,8 @@ author      : "pshung"
 ### Summary
 Word romantic can be used to describle a unrela
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYyOTU5NTU2Miw1NDU3OTA3NDIsODI5OD
-EyMTcxLC02OTgyNDA1NzIsLTYxNjc2MjI2OCwtMTczODkzNTc5
-Miw4NTYwMjU4OTksLTE2NzMyNTc1NCwxNDE2MDE0OTk3XX0=
+eyJoaXN0b3J5IjpbMTc2MTQ4MzQ4OSwtNjI5NTk1NTYyLDU0NT
+c5MDc0Miw4Mjk4MTIxNzEsLTY5ODI0MDU3MiwtNjE2NzYyMjY4
+LC0xNzM4OTM1NzkyLDg1NjAyNTg5OSwtMTY3MzI1NzU0LDE0MT
+YwMTQ5OTddfQ==
 -->
