Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -31,12 +31,12 @@ author      : "pshung"
 * What is she worried about?
 	* What does she worry about?
 
-### Questions
 
 ### Summary
-Word romantic can be used to describle a unrela
+Foodies, a word used to descible someone who has strong intereset in food, including prepration, buying, 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc2MTQ4MzQ4OSwtNjI5NTk1NTYyLDU0NT
-c5MDc0Miw4Mjk4MTIxNzEsLTY5ODI0MDU3MiwtNjE2NzYyMjY4
-LC0xNzM4OTM1NzkyLDg1NjAyNTg5OSwtMTY3MzI1NzU0XX0=
+eyJoaXN0b3J5IjpbLTEzODQxNzc2MTksMTc2MTQ4MzQ4OSwtNj
+I5NTk1NTYyLDU0NTc5MDc0Miw4Mjk4MTIxNzEsLTY5ODI0MDU3
+MiwtNjE2NzYyMjY4LC0xNzM4OTM1NzkyLDg1NjAyNTg5OSwtMT
+Y3MzI1NzU0XX0=
 -->
