Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -31,13 +31,12 @@ author      : "pshung"
 * What is she worried about?
 	* What does she worry about?
 
-### Questions
 
 ### Summary
-Word romantic can be used to describle a unrela
+Foodies, a word used to descible someone who has strong intereset in food, including prepration, buying, and cooki
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc2MTQ4MzQ4OSwtNjI5NTk1NTYyLDU0NT
-c5MDc0Miw4Mjk4MTIxNzEsLTY5ODI0MDU3MiwtNjE2NzYyMjY4
-LC0xNzM4OTM1NzkyLDg1NjAyNTg5OSwtMTY3MzI1NzU0LDE0MT
-YwMTQ5OTddfQ==
+eyJoaXN0b3J5IjpbLTE1NzU3OTU5MjEsMTc2MTQ4MzQ4OSwtNj
+I5NTk1NTYyLDU0NTc5MDc0Miw4Mjk4MTIxNzEsLTY5ODI0MDU3
+MiwtNjE2NzYyMjY4LC0xNzM4OTM1NzkyLDg1NjAyNTg5OSwtMT
+Y3MzI1NzU0LDE0MTYwMTQ5OTddfQ==
 -->
