Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -33,10 +33,11 @@ author      : "pshung"
 
 
 ### Summary
-Foodies, a word used to descible someone who has strong intereset in food, including prepration, buying, and cooki
+Foodies, a word used to descible someone who has strong intereset in food, including prepration, buying, and cooking.
+I think my wife is so-called foodie, because she loves eating, cooking and studing the ingredents. 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NzU3OTU5MjEsMTc2MTQ4MzQ4OSwtNj
-I5NTk1NTYyLDU0NTc5MDc0Miw4Mjk4MTIxNzEsLTY5ODI0MDU3
-MiwtNjE2NzYyMjY4LC0xNzM4OTM1NzkyLDg1NjAyNTg5OSwtMT
-Y3MzI1NzU0LDE0MTYwMTQ5OTddfQ==
+eyJoaXN0b3J5IjpbNTE0ODA4Mzg4LDE3NjE0ODM0ODksLTYyOT
+U5NTU2Miw1NDU3OTA3NDIsODI5ODEyMTcxLC02OTgyNDA1NzIs
+LTYxNjc2MjI2OCwtMTczODkzNTc5Miw4NTYwMjU4OTksLTE2Nz
+MyNTc1NCwxNDE2MDE0OTk3XX0=
 -->
