Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -34,10 +34,11 @@ author      : "pshung"
 
 ### Summary
 Foodies, a word used to descible someone who has strong intereset in food, including prepration, buying, and cooking.
-I think my wife is so-called foodie, because she loves eating, cooking and studing the ingredents 
+I think my wife is so-called foodie, because she loves eating, cooking and studing of ingredents. She buys a lot of cooking books and watches a lot of TV show about cooking.
+She cooks for my fami
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE3NzIxNzM0MiwxNzYxNDgzNDg5LC02Mj
-k1OTU1NjIsNTQ1NzkwNzQyLDgyOTgxMjE3MSwtNjk4MjQwNTcy
-LC02MTY3NjIyNjgsLTE3Mzg5MzU3OTIsODU2MDI1ODk5LC0xNj
-czMjU3NTRdfQ==
+eyJoaXN0b3J5IjpbLTIwOTU2MDExMDQsMTc2MTQ4MzQ4OSwtNj
+I5NTk1NTYyLDU0NTc5MDc0Miw4Mjk4MTIxNzEsLTY5ODI0MDU3
+MiwtNjE2NzYyMjY4LC0xNzM4OTM1NzkyLDg1NjAyNTg5OSwtMT
+Y3MzI1NzU0XX0=
 -->
