Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md
+++ b/_posts/2018-04-20-test.md
@@ -35,10 +35,10 @@ author      : "pshung"
 ### Summary
 Foodies, a word used to descible someone who has strong intereset in food, including prepration, buying, and cooking.
 I think my wife is so-called foodie, because she loves eating, cooking and studing of ingredents. She buys a lot of cooking books and watches a lot of TV show about cooking.
-She cooks for my family a
+She cooks for my family almost everyday and prepares the meal box for me. Though, she is a bit romantic, she don
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY0MzU2OTMxMCwxNzYxNDgzNDg5LC02Mj
-k1OTU1NjIsNTQ1NzkwNzQyLDgyOTgxMjE3MSwtNjk4MjQwNTcy
-LC02MTY3NjIyNjgsLTE3Mzg5MzU3OTIsODU2MDI1ODk5LC0xNj
-czMjU3NTQsMTQxNjAxNDk5N119
+eyJoaXN0b3J5IjpbMjcyNTQ1MzgyLDE3NjE0ODM0ODksLTYyOT
+U5NTU2Miw1NDU3OTA3NDIsODI5ODEyMTcxLC02OTgyNDA1NzIs
+LTYxNjc2MjI2OCwtMTczODkzNTc5Miw4NTYwMjU4OTksLTE2Nz
+MyNTc1NCwxNDE2MDE0OTk3XX0=
 -->
