Uploaded by https://stackedit.io/

--- a/_posts/2018-04-20-test.md.md
+++ b/_posts/2018-04-20-test.md.md
@@ -35,9 +35,9 @@ author      : "pshung"
 ### Summary
 Foodies, a word used to descible someone who has strong intereset in food, including prepration, buying, and cooking.
 I think my wife is so-called foodie, because she loves eating, cooking and studing of ingredents. She buys a lot of cooking books and watches a lot of TV show about cooking.
-She cooks for my family almost everyday and prepares the meal box for me. Though, she is a bit romantic, she
+She cooks for my family almost everyday and prepares the meal box for me. Though, she is a bit romantic, she is incapable of controling  the expense well.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMjg1MDI0ODcsMTc2MTQ4MzQ4OSwtNj
+eyJoaXN0b3J5IjpbLTEzNzM1MzI4OTcsMTc2MTQ4MzQ4OSwtNj
 I5NTk1NTYyLDU0NTc5MDc0Miw4Mjk4MTIxNzEsLTY5ODI0MDU3
 MiwtNjE2NzYyMjY4LC0xNzM4OTM1NzkyLDg1NjAyNTg5OSwtMT
 Y3MzI1NzU0XX0=
