--- a/_posts/2018-04-20-bbc-1.md
+++ b/_posts/2018-04-20-bbc-1.md
@@ -34,8 +34,8 @@ author      : "pshung"
 
 ### Summary
 Foodies, a word used to descible someone who has strong intereset in food, including prepration, buying, and cooking.
-I think my wife is so-called foodie, because she loves eating, cooking and studing of ingredents. She buys a lot of cooking books and watches a lot of TV show about cooking.
+I think my wife is a foodie, because she loves eating, cooking and studing of ingredents. She buys a lot of cooking books and watches a lot of TV show about cooking.
 She cooks for my family almost everyday and prepares the meal box for me. Though, she is a bit romantic, she is incapable of controling  the expense well. 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0OTU4NzEyNDNdfQ==
+eyJoaXN0b3J5IjpbLTQ3OTUzODc1MCwtMTQ5NTg3MTI0M119
 -->
