--- a/_posts/2018-04-20-bbc-1.md
+++ b/_posts/2018-04-20-bbc-1.md
@@ -33,9 +33,9 @@ author      : "pshung"
 
 
 ### Summary
-Foodies, a word used to descible someone who has strong intereset in food, including prepration, buying, and cooking.
+Foodies is a word used to descible someone who has strong intereset in food, including prepration, buying, and cooking.
 I think my wife is a foodie, because she loves eating, cooking and studing of ingredents. She buys a lot of cooking books and watches a lot of TV show about cooking.
 She cooks for my family almost everyday and prepares the meal box for me. Though, she is a bit romantic, she is incapable of controling  the expense well. 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ3OTUzODc1MF19
+eyJoaXN0b3J5IjpbMjEyMDM5NjA2NCwtNDc5NTM4NzUwXX0=
 -->
