Saved 2018-08-24-LLVM-1.md with Dillinger.io

--- a/_posts/2018-08-24-LLVM-1.md
+++ b/_posts/2018-08-24-LLVM-1.md
@@ -7,4 +7,28 @@ author      : "pshung"
 ---
 
 
-### LLVM
+## Register a RISCV target and a TargetMachine to use llvm target-independent code generator.
+Use class TargetRegistry to register a target, target machine and a list of MC components.
+
+In subdirectory TargetInfo, RISCVTargetInfo.cpp
+```c++
+Target &llvm::getTheRISCVTarget() {
+  static Target RISCVTarget;
+  return RISCVTarget;
+}
+
+extern "C" void LLVMInitializeRISCVTargetInfo() {
+  RegisterTarget<Triple::riscv64> X(getTheRISCVTarget(), "RISCV64",
+                                    "RISCV 64-bit", "RISCV");
+}
+
+```
+In RISCVTargetMachine.cpp
+```c++
+extern "C" void LLVMInitializeRISCVTarget() {
+  RegisterTargetMachine<RISCVTargetMachine> X(getTheRISCVTarget());
+}
+
+```
+
+
