Saved 2018-08-24-LLVM-1.md with Dillinger.io

--- a/_posts/2018-08-24-LLVM-1.md
+++ b/_posts/2018-08-24-LLVM-1.md
@@ -1,4 +1,3 @@
-
 ---
 layout  : page
 title   : "LLVM #1"
@@ -7,8 +6,8 @@ author      : "pshung"
 ---
 
 
-## Register a RISCV target and a TargetMachine to use llvm target-independent code generator.
-Use class TargetRegistry to register a target, target machine and a list of MC components.
+# Register a RISCV target and a TargetMachine to use llvm target-independent code generator.
+Use class **TargetRegistry** to register a target, TargetMachine and a list of MC components.
 
 In subdirectory TargetInfo, RISCVTargetInfo.cpp
 ```c++
@@ -31,4 +30,5 @@ extern "C" void LLVMInitializeRISCVTarget() {
 
 ```
 
+# Lowering LLVM IR to SelectionDAG.
 
