Saved 2018-08-24-LLVM-1.md with Dillinger.io

--- a/_posts/2018-08-24-LLVM-1.md
+++ b/_posts/2018-08-24-LLVM-1.md
@@ -1,6 +1,6 @@
 ---
 layout  : page
-title   : "LLVM #1"
+title   : "LLVM RISC-V #1: from LLVM IR to SelectionDAG"
 date       : 2018-08-24
 author      : "pshung"
 ---
@@ -30,5 +30,40 @@ extern "C" void LLVMInitializeRISCVTarget() {
 
 ```
 
-# Lowering LLVM IR to SelectionDAG.
+# LLVM target-independent code generator
+It consists of a pipeline of MachineFunctionPass to trasnform LLVM IR to mahcine assembly code.
+The pipeline is managed by PassManager. LLC obtains the TargetMachine and calls the addPassesToEmitFile to add passes to the passmanager. All AddXXX method in TargetMachine actually calls TargetPassConfig to setup the code generation pipeline.
+```
+static MCContext *
+addPassesToGenerateCode(LLVMTargetMachine *TM, PassManagerBase &PM,
+                        bool DisableVerify, bool &WillCompleteCodeGenPipeline,
+                        raw_pwrite_stream &Out, MachineModuleInfo *MMI) {
+  // Targets may override createPassConfig to provide a target-specific
+  // subclass.
+  TargetPassConfig *PassConfig = TM->createPassConfig(PM);
+  // Set PassConfig options provided by TargetMachine.
+  PM.add(PassConfig);
+
+  if (PassConfig->addISelPasses())
+    return nullptr;
+  PassConfig->addMachinePasses();
+
+  return &MMI->getContext();
+}
+```
+
+The most important two parts of the code generation are instruction selection and post instruction selection(e.g. register allocation and instruction scheduling).
+Calls addISelPasses to setup instruction selection pass.
+Calls addMachinePasses to setup post instruction selection passes.
+In addCoreISelPasses, choose new introduced global instruction selector or traditional SelectionDAG-based selector.
+If you want to use traditional SelectionDAG-based selector, you must override TargetPassConfig's addInstSelector and add your target DAGtoDAG selectin pass.
+In my implementation, always enable global instruction selection and abort if fails.
+
+
+
+
+
+
+
+
 
