--- a/_posts/2018-08-24-LLVM-RISCV-1.md
+++ b/_posts/2018-08-24-LLVM-RISCV-1.md
@@ -1,8 +1,8 @@
 ---
 layout  : page
-title   : "LLVM RISC-V #1: from LLVM IR to SelectionDAG"
-date       : 2018-08-24
-author      : "pshung"
+title   : "LLVM RISC-V #1: Target, TargetMachine and Code Generation Pipeline."
+date    : 2018-08-24
+author  : "pshung"
 ---
 
 
