Saved 2018-08-27-LLVM-RISCV-2.md with Dillinger.io

--- a/_posts/2018-08-27-LLVM-RISCV-2.md
+++ b/_posts/2018-08-27-LLVM-RISCV-2.md
@@ -7,3 +7,9 @@ author  : "pshung"
 
 
 # Why global instruction selection?
+* Faster compile time (avoid LLVM to SelectionDAG translation phase)
+* better run time performance (match complex pattern across basic blocks)
+* share code between fast and optimized selection
+* more modularity (divide whole instruction selection into a pipeline of passes).
+[Reference:](https://2pi.dk/llvm/global-isel)
+
