Saved 2018-08-29-LLD.md with Dillinger.io

--- a/_posts/2018-08-29-LLD.md
+++ b/_posts/2018-08-29-LLD.md
@@ -6,4 +6,38 @@ author  : "pshung"
 ---
 
 # After symbol resolution.
+Writer::run
+* createSyntheticSections,  create linker synthesized sections as input sections
+  * Note that putting those in InputSections is a key notion, because those InputSections will be matched by linker script rules later. Only a few of OutputSection are created directly such ELFHeader section, ProgramHeader section.
+* processSectionCommands
+	* add linker script defined symbols and put matched InputSections into a OutputSection
+		* Note: the address of OutputSection and InputSection are not decided yet.
+	* addOrphanSections
+		* Orphan section: the InputSections are specified by a linker script, so linker assigns them to default OutputSection and orders those default OutputSections.
+		* create new OutputSections or add into existing OutputSections for those orphan sections at the end of SectionCommands
+		* Note that OutputSection specified in linker script are ordered in SectionCommands and has a section index assigned, and those linker created OutputSection for the orphan section are listed at the end of SectionCommand with a UINT_MAX section index.
+* finalizeSections
+  * add section content, e.g., .got section, .plt section, symbol table.
+	* Once the section content has been finalized, the size of those synthesized OutputSection has been decided; thus, we can assign the address later.
+		* scanRelocations
+		* removeUnusedSyntheticSections
+			* After scanRelocations, we know if the synthetic sections are empty or not. e.g., .got, .plt. Since they have been added into an OutputSection, remove it from OutputSection's InputSection list.
+		* sortSections
+			* adjustSectionsBeforeSorting
+				* remove those empty OutputSection, an OutputSection is alive if there was an InputSection added, but an OutputSection may have empty InputSection list since those synthetic sections may be removed.
+				* empty condition is not enough to decide if the SectionCommand should be removed or not. Consider byte(), word() commands.
+				* recap: InputSection's live property is decided by GC pass. OutputSection's live property is set if there's an InputSection added.
+			* sortInputSections
+			* sort Orphan OutputSections.
+			* adjustSectionsAfterSorting
+				* assign a memory region
+		* establish OutputSections vector (only non-discarable OutputSection)
+		* assign section index for each in OututSections vector
+		* createPhdrs: create program header
+		* finalize all synthetic sections (finalizeContents)
+* Script->assignAddresses()
+		* assign address for symbols and output sections.
+
+
+
 
