Saved 2018-08-29-LLD.md with Dillinger.io

--- a/_posts/2018-08-29-LLD.md
+++ b/_posts/2018-08-29-LLD.md
@@ -4,6 +4,7 @@ title   : "LLD"
 date    : 2018-08-29
 author  : "pshung"
 ---
+# Symbol resolution
 
 # After symbol resolution.
 Writer::run
@@ -38,6 +39,6 @@ Writer::run
 * Script->assignAddresses()
 		* assign address for symbols and output sections.
 
-
+# Relocation
 
 
