Saved 2018-08-27-LLVM-RISCV-2.md with Dillinger.io

--- a/_posts/2018-08-27-LLVM-RISCV-2.md
+++ b/_posts/2018-08-27-LLVM-RISCV-2.md
@@ -13,3 +13,52 @@ author  : "pshung"
 * more modularity (divide whole instruction selection into a pipeline of passes).
 [Reference:](https://2pi.dk/llvm/global-isel)
 
+# Global Instruction Selection Passes
+* addIRTranslator
+* addLegalizeMachineIR
+* addRegBankSelect
+* addGlobalInstructionSelect
+
+# IRTranslator, transform LLVM IR to Machine IR.
+LLVM IR:
+include/llvm/IR/Instruction.def
+## Intoruce generic machine instruction to fill the gap between llvm IR and target instruction.
+include/llvm/Support/TargetOpcodes.def
+include/llvm/CodeGen/TargetOpcodes.h
+Introduce the same generic opcode as SelectionDAG SDNode
+
+##LLVM IR type to EVT
+include/llvm/CodeGen/ValueTypes.h
+EVT:
+>// This file defines the set of low-level target independent types which various
+// values in the code generator are.  This allows the target specific behavior
+// of instructions to be described to target independent passes.
+/// Extended Value Type. Capable of holding value types which are not native
+/// for any processor (such as the i12345 type), as well as the types an MVT
+/// can represent.
+
+##Generic virtual register
+Virtual register with size information needed for register bank selection
+
+lower ABI boundary, target implements three hooks (lowerReturn, lowerFormalArguments, lowerCall) so that 
+* lowerFormalArguments:
+  * split LLVM IR type to EVT
+  * create generic machine instructions to copy the physical registers into virtual registers with EVT.
+  
+```
+define i64 @inc(i64 %a)  {
+  %1 = add nsw i64 %a, 1
+  ret i64 %1
+}
+```
+llc -march=RISCV64 test.ll -o test.mir -stop-after=irtranslator
+```
+    %0:_(s64) = COPY $x10_64
+    %1:_(s64) = G_CONSTANT i64 1
+    %2:_(s64) = G_ADD %0, %1
+    $x10_64 = COPY %2(s64)
+    Ret implicit $x10_64
+```
+All operation operates on generate virtual registers, so create generic virtual register on constant.
+
+
