Saved 2018-08-27-LLVM-RISCV-2.md with Dillinger.io

--- a/_posts/2018-08-27-LLVM-RISCV-2.md
+++ b/_posts/2018-08-27-LLVM-RISCV-2.md
@@ -61,4 +61,22 @@ llc -march=RISCV64 test.ll -o test.mir -stop-after=irtranslator
 ```
 All operation operates on generate virtual registers, so create generic virtual register on constant.
 
+llc -march=RISCV64 test.ll -o test.mir -stop-after=legalizer
+```
+    %0:_(s64) = COPY $x10_64
+    %1:_(s64) = G_CONSTANT i64 1
+    %2:_(s64) = G_ADD %0, %1
+    $x10_64 = COPY %2(s64)
+    Ret implicit $x10_64
+
+```
+llc -march=RISCV64 test.ll -o test.mir -stop-after=regbankselect
+```
+    %0:gpr(s64) = COPY $x10_64
+    %1:gpr(s64) = G_CONSTANT i64 1
+    %2:gpr(s64) = G_ADD %0, %1
+    $x10_64 = COPY %2(s64)
+    Ret implicit $x10_64
+
+```
 
