Saved 2018-08-27-LLVM-RISCV-2.md with Dillinger.io

--- a/_posts/2018-08-27-LLVM-RISCV-2.md
+++ b/_posts/2018-08-27-LLVM-RISCV-2.md
@@ -51,7 +51,7 @@ define i64 @inc(i64 %a)  {
   ret i64 %1
 }
 ```
-llc -march=RISCV64 test.ll -o test.mir -stop-after=irtranslator
+llc --global-isel -march=RISCV64 test.ll -o test.mir -stop-after=irtranslator
 ```
     %0:_(s64) = COPY $x10_64
     %1:_(s64) = G_CONSTANT i64 1
@@ -61,7 +61,7 @@ llc -march=RISCV64 test.ll -o test.mir -stop-after=irtranslator
 ```
 All operation operates on generate virtual registers, so create generic virtual register on constant.
 
-llc -march=RISCV64 test.ll -o test.mir -stop-after=legalizer
+llc --global-isel -march=RISCV64 test.ll -o test.mir -stop-after=legalizer
 ```
     %0:_(s64) = COPY $x10_64
     %1:_(s64) = G_CONSTANT i64 1
@@ -70,7 +70,7 @@ llc -march=RISCV64 test.ll -o test.mir -stop-after=legalizer
     Ret implicit $x10_64
 
 ```
-llc -march=RISCV64 test.ll -o test.mir -stop-after=regbankselect
+llc --global-isel -march=RISCV64 test.ll -o test.mir -stop-after=regbankselect
 ```
     %0:gpr(s64) = COPY $x10_64
     %1:gpr(s64) = G_CONSTANT i64 1
@@ -79,4 +79,5 @@ llc -march=RISCV64 test.ll -o test.mir -stop-after=regbankselect
     Ret implicit $x10_64
 
 ```
+llc --global-isel -march=RISCV64 test.ll -o test.s -stop-after=instruction-select
 
