Saved 2018-08-32-LLVM-RISCV-3.md with Dillinger.io

--- a/_posts/2018-08-32-LLVM-RISCV-3.md
+++ b/_posts/2018-08-32-LLVM-RISCV-3.md
@@ -7,6 +7,20 @@ author  : "pshung"
 
 
 # LLVM IR
+[LLVM language specification](https://llvm.org/docs/LangRef.html)
+[LLVM core classes of IR](http://llvm.org/docs/ProgrammersManual.html#the-core-llvm-class-hierarchy-reference)
+LLVMContext: an important class to use llvm in a threaded context. It manages core global datas in llvm.
+Derived type: only one instance at a time to assure type equality.
+
+What are first class type? (Operands with the first class types can be used as operands of instructions)(Values of these types are the only ones which can be produced by instructions.)
+e.g., integer, label, function, pointer, vector
+What are not?
+Array is not a first class type.
+
+Module: consist of functions and global varaibles and a symbol table.
+Value: base class represents operands that can be used by instructions. (including function, integer, instruction etc)
+It keeps track of a list of users to form a def-use chain.
+User is a class that can refer to values. (including function, instruction). It exposes a list of operands that the user is referring to. The operand of a users directly points to the value definition. Since LLVM uses the SSA form, this provides the use-def information in llvm.
 
 # New Generic Machine IR
 
