Saved 2018-08-27-LLVM-RISCV-2.md with Dillinger.io

--- a/_posts/2018-08-27-LLVM-RISCV-2.md
+++ b/_posts/2018-08-27-LLVM-RISCV-2.md
@@ -79,5 +79,15 @@ llc --global-isel -march=RISCV64 test.ll -o test.mir -stop-after=regbankselect
     Ret implicit $x10_64
 
 ```
+llvm-tblgen -gen-global-isel RISCV.td -Ipath/to/llvm/include/ --stats
+shows the states of importing patterns from SelectionDAG.
+
 llc --global-isel -march=RISCV64 test.ll -o test.s -stop-after=instruction-select
+```
+    %0:gpr64 = COPY $x10_64
+    %2:gpr64 = ADDI %0, 1
+    $x10_64 = COPY %2
+    Ret implicit $x10_64
+
+```
 
